2005-12-30  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ReportUtils.py: Use new RelLib API
	* src/PedView.py: Use ReportUtils to generate text; highlight selected
	person; enable Tooltips; Optionally show peoples images
	
2005-12-29  Don Allingham  <don@gramps-project.org>
	* src/GrampsLocale.py: handle platform specific locale issues
	* src/DateDisplay.py: use GrampsLocale
	* src/DateParser.py: use GrampsLocale
	* src/DisplayModels.py: use GrampsLocale
	* src/Exporter.py: start conversion to Assistant
	* src/PeopleModel.py: use GrampsLocale
	* src/RecentFiles.py: fcntl option for broken platforms
	* src/StartupDialog.py: convert to Assistant
	* src/ViewManager.py: remove debug statement
	* src/RelLib/_PrimaryObject.py: use GrampsLocale
	* src/plugins/Checkpoint.py: use GrampsLocale
	* src/plugins/NavWebPage.py: use GrampsLocale

2005-12-29  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Use a DrawingArea for nicer person boxes
	* src/GrampsDb/_GrampsDbBase.py (_update_reference_map): Sync
	parameters to other classes
	* src/GrampsDb/_ReadXML.py (stop_event): Catch invalid event
	code. Still has to be done properly

2005-12-29  Don Allingham  <don@gramps-project.org>
	* src/gramps_main.py: move gnome program init to gramps.py
	* src/gramps.py: add gnome program init	        
	* src/StartupDialog.py: use Assistant instead of gnome.ui.druid
	* src/Assistant.py: added
	* src/ArgHandler.py: remove DbPrompter dependency
	* src/GrampsGconfKeys.py: Support for saving window size
	* src/GrampsIniKeys.py: Support for saving window size
	* src/GrampsKeys.py: more gracefully handling missing gconf
	* src/Makefile.am: Fixed moved files
	* src/Report.py: clean up
	* src/ScratchPad.py: use GrampsDisplay instead of gnome.help_display
	* src/StartupDialog.py: clean up
	* src/ViewManager.py: save window size
	* src/gramps_main.py: don't require gnome
	* src/data/gramps.schemas: keys for saving window size

2005-12-29  Martin Hawlisch  <Martin.Hawlisch@gmx.de>